added privacy policy content, refund policy , shipping and collection, and terms-and-conditions page

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -7,6 +7,10 @@
             <img src="/static/assets/images/logo/mlogo.png" alt="">
           </div>
           <p>A one-stop destination for Graphic Designing</p>
+          <p>&quot;Monkeysingh.com&quot; is Operated by Legal Name for &quot;Digital Media Step&quot; Register Under
+            GSTIN/UIN:
+            08ARRPC1623K1ZP
+            Address - D -16 JANTA NAGAR RANKDI SODALA,JAIPUR-302006</p>
         </div>
         <div class="widget">
           <h5 class="widget-title">
@@ -81,6 +85,21 @@
             <li>
               <a href="/privacy-policy">
                 Privacy Policy
+              </a>
+            </li>
+            <li>
+              <a href="/refund-policy">
+                Refund Policy
+              </a>
+            </li>
+            <li>
+              <a href="/shipping-and-collection">
+                Shipping And Collection
+              </a>
+            </li>
+            <li>
+              <a href="/terms-and-conditions">
+                Terms and Conditions
               </a>
             </li>
           </ul>
